# qgis-cartads-plugin

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CREATE_PLUGIN.sh  Makefile  README.md  README_CREATE_MIGRATION.md  mkdocs.yml  pyproject.toml  setup-plugin.sh  upgrade-schema-version.sh
.docker/: docker-compose.yml  export_database_structure_to_SQL.sh  qgis_settings.ini
.github/workflows/: ci.yml  test-migration.yml  tests.yml
cartads/: __main__.py  dockwidget.py  metadata.txt  plugin.py
cartads/install/sql/: 00_initialize_database.sql  README.md
cartads/install/sql/cartads/: 10_FUNCTION.sql  20_TABLE_SEQUENCE_DEFAULT.sql  60_CONSTRAINT.sql  70_COMMENT.sql  90_GLOSSARY.sql
cartads/install/sql/upgrade/: upgrade_to_1.sql  upgrade_to_2.sql
cartads/plugin_tools/: resources.py
cartads/processing/: provider.py  tools.py
cartads/processing/database/: __init__.py  alg_create.py  alg_import_form_api.py  alg_upgrade.py
cartads/resources/qgis/: plugin_admin.qgs
cartads/resources/ui/: dockwidget_base.ui
docs/: index.md
docs/user-guide/: installation.md
requirements/: dev.txt  doc.txt  tests.txt  transifex.txt
tests/: conftest.py  conftest_database.py  pytest.ini  qgis_settings.ini  qgis_testing.py  test_load_structure.py
tests/data/install-version-1/sql/cartads/: 20_TABLE_SEQUENCE_DEFAULT.sql  90_GLOSSARY.sql
