# This section is not used for building anything
# but it is informative and most of theses informations
# should be the same as the plugin's metatada.txt
[project]
name = "cartads"
version = "0.1.0"
description = "An exemple of plugin development setup"
authors = [
    { name = "3Liz", email = "info@3liz.com" }
]
requires-python = ">= 3.10"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

[projects.urls]
tracker = "https://github.com/3liz/qgis-qgis-cartads-plugin-plugin"
repository = "https://github.com/3liz/qgis-qgis-cartads-plugin-plugin"
homepage = "https://github.com/3liz/qgis-qgis-cartads-plugin-plugin"

# Organize dependencies so that uv can build appropriates
# requirement files for CI
[dependency-groups]
dev = [
    "coverage[toml]",
    {include-group = "tests"},
    {include-group = "lint"},
]
tests = [
    "semver",
    "pytest",
    "pytest_qgis",
    "psycopg[binary]",
]
lint = [
    "ruff",
    "mypy",
    "bandit",
    "vulture",
    "types-requests",
]
transifex = [
    "qt-transifex; python_full_version >= '3.12'",
]
doc = [
    "mkdocs-material>=7.0.0,<10.0.0",
    "mkdocs-git-revision-date-localized-plugin",
]

[tool.uv.sources]
qt-transifex = { git = "https://github.com/3liz/qt-transifex" }
pytest-qgis = { git = "https://github.com/3liz/pytest-qgis.git" }

[tool.yapt]
plugin_source = "cartads"

[tool.qt-transifex]
plugin_source = "cartads"
organization = "3liz-1"
project = "qgis-cartads-plugin"
resource = "qgis-cartads-plugin"
#minimum_translation =  25.0

#
# Ruff
#
# https://doc.astral.sh/ruff/configuration
#

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    ".venv",
    ".local",
]

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
extend-select = [
    "E", "F", "I", "ANN", "W", "T", "COM", "RUF",
    "C4", "TC",
]
# COM812 conflict with formatter
ignore = [
    "ANN002",
    "ANN003",
    "ANN401", # Dynamically typed expressions (typing.Any)
    "COM812",
    "RUF067", # module should only contain docstrings and re-exports
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [ "T201" ]
"__init__.py" = [ "F401" ]
"__main__.py" = [ "T201" ]

[tool.ruff.lint.isort]
lines-between-types = 1
known-first-party = [
    "cartads",
]
known-third-party = [
    "qgis",
]
order-by-type = true

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true
suppress-dummy-args = true

#
# Mypy
#
[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
    "qgis.*",
    "osgeo.*",
    "processing.*",
]
ignore_missing_imports = true

#
# Coverage
#

[tool.coverage.run]
source = ["cartads"]
branch = true
relative_files = true

[tool.coverage.report]
precision = 2
exclude_lines = [
 "if TYPE_CHECKING",
 '\(Protocol\):$',
]

